# brazilian_house_for_rent

./: README.md  pyproject.toml
data/processed/: brazilian_houses.db  brazilian_houses.pkl
data/raw/: convert_sql.py
docs/: Makefile  conf.py  index.rst  make.bat
models/: clustering_model.pkl
notebooks/: notebook_1.ipynb
