[tool.poetry]
name = "brazilian-houses-for-rent"
version = "0.1.0"
description = ""
authors = ["Gutto <guttolaudie@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
numpy = "^1.26.3"
pandas = "^2.1.4"
scipy = "^1.11.4"
seaborn = "^0.13.1"
kaggle = "^1.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
